--- a/bbc/tox.ini
+++ b/bbc/tox.ini
@@ -14,6 +14,6 @@ deps = flake8
 commands = flake8
 
 [flake8]
-max-line-length = 130
-ignore = F403,F405
+max-line-length = 162
+ignore = F403,F405,F401
 exclude = .tox,migrations,docs,examples
