fix link to requirements

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 
 [testenv]
 passenv = *
-deps = -r{toxinidir}/bbc/requirements/requirements.txt
+deps = -r{toxinidir}/bbc/requirements/requirements.in
 commands = python runtests.py
 
 [testenv:flake8]
