--- a/bbc/requirements/requirements.txt
+++ b/bbc/requirements/requirements.txt
@@ -18,7 +18,9 @@ pymongo==3.6.0
 python-social-auth==0.3.6
 pytz==2018.3
 requests==2.18.4
-requests-oauthlib==0.5.0
+# requests-oauthlib==0.5.0
+# Requires newer version for social-auth-core==1.7.0
+requests-oauthlib==0.6.1
 six==1.11.0
 social-auth-app-django==2.1.0
 social-auth-core==1.7.0
