--- a/bbc/requirements/requirements.in
+++ b/bbc/requirements/requirements.in
@@ -1,6 +1,8 @@
 Django<2.0
 django-bootstrap-form
 django-localflavor
+python3-openid==3.1.0 ; python_version > '3.3'
+python-openid==2.2.5 ; python_version <= '2.7'
 python-social-auth
 requests
 requests_oauthlib<0.7
